--- a/.beagle.yml
+++ b/.beagle.yml
@@ -37,10 +37,9 @@ steps:
         from_secret: SOCKS5_PROXY
 
   - name: golang
-    image: registry.cn-qingdao.aliyuncs.com/wod/devops-go-arch:1.20-alpine
-    settings:
-      goarchs: amd64,arm64,ppc64le,mips64le
-      binary: metrics-sidecar
+    image: registry.cn-qingdao.aliyuncs.com/wod/golang:1.20
+    commands:
+      - bash .beagle/build.sh
 
   - name: docker-amd64
     image: registry.cn-qingdao.aliyuncs.com/wod/devops-docker:1.0
