--- a/.beagle.yml
+++ b/.beagle.yml
@@ -1,6 +1,10 @@
 kind: pipeline
 name: docker
 
+trigger:
+  branch:
+    - dev-1.0.6
+
 volumes:
   - name: docker
     host:
@@ -13,6 +17,19 @@ clone:
   disable: true
 
 steps:
+  - name: s3-cache
+    image: registry.cn-qingdao.aliyuncs.com/wod/devops-s3-cache:1.0
+    settings:
+      restore: true
+      mount:
+        - ./.git
+        - ./vendor
+      endpoint: https://cache.wodcloud.com
+      access_key:
+        from_secret: ACCESS_KEY_MINIO
+      secret_key:
+        from_secret: SECRET_KEY_MINIO
+
   - name: fetch
     image: registry.cn-qingdao.aliyuncs.com/wod/devops-git:1.0
     settings:
@@ -20,11 +37,9 @@ steps:
         from_secret: SOCKS5_PROXY
 
   - name: golang
-    image: registry.cn-qingdao.aliyuncs.com/wod/golang:1.19-bullseye
-    environment:
-      GOFLAGS: -mod=vendor
+    image: registry.cn-qingdao.aliyuncs.com/wod/golang:1.20
     commands:
-      - ./.beagle/build.sh
+      - bash .beagle/build.sh
 
   - name: docker-amd64
     image: registry.cn-qingdao.aliyuncs.com/wod/devops-docker:1.0
@@ -34,8 +49,8 @@ steps:
     settings:
       dockerfile: .beagle/dockerfile
       base: registry.cn-qingdao.aliyuncs.com/wod/alpine:3-amd64
-      repo: wod/metrics-scraper
-      version: v1.0.6
+      repo: wod/awecloud-metrics-scraper
+      version: v6.0.6
       channel: amd64
       args: 'TARGETOS=linux,TARGETARCH=amd64'
       registry: registry.cn-qingdao.aliyuncs.com
@@ -52,8 +67,8 @@ steps:
     settings:
       dockerfile: .beagle/dockerfile
       base: registry.cn-qingdao.aliyuncs.com/wod/alpine:3-arm64
-      repo: wod/metrics-scraper
-      version: v1.0.6
+      repo: wod/awecloud-metrics-scraper
+      version: v6.0.6
       channel: arm64
       args: 'TARGETOS=linux,TARGETARCH=arm64'
       registry: registry.cn-qingdao.aliyuncs.com
@@ -70,8 +85,8 @@ steps:
     settings:
       dockerfile: .beagle/dockerfile
       base: registry.cn-qingdao.aliyuncs.com/wod/alpine:3-ppc64le
-      repo: wod/metrics-scraper
-      version: v1.0.6
+      repo: wod/awecloud-metrics-scraper
+      version: v6.0.6
       channel: ppc64le
       args: 'TARGETOS=linux,TARGETARCH=ppc64le'
       registry: registry.cn-qingdao.aliyuncs.com
@@ -88,8 +103,8 @@ steps:
     settings:
       dockerfile: .beagle/dockerfile
       base: registry.cn-qingdao.aliyuncs.com/wod/alpine:3-mips64le
-      repo: wod/metrics-scraper
-      version: v1.0.6
+      repo: wod/awecloud-metrics-scraper
+      version: v6.0.6
       channel: mips64le
       args: 'TARGETOS=linux,TARGETARCH=mips64le'
       registry: registry.cn-qingdao.aliyuncs.com
@@ -105,8 +120,75 @@ steps:
         path: /var/run/docker.sock
     settings:
       platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/mips64le
-      template: registry.cn-qingdao.aliyuncs.com/wod/metrics-scraper:v1.0.6-ARCH
-      target: registry.cn-qingdao.aliyuncs.com/wod/metrics-scraper:v1.0.6
+      template: registry.cn-qingdao.aliyuncs.com/wod/awecloud-metrics-scraper:v6.0.6-ARCH
+      target: registry.cn-qingdao.aliyuncs.com/wod/awecloud-metrics-scraper:v6.0.6
+      username:
+        from_secret: REGISTRY_USER_ALIYUN
+      password:
+        from_secret: REGISTRY_PASSWORD_ALIYUN
+
+---
+kind: pipeline
+name: harbor
+
+trigger:
+  branch:
+    - release-1.0.6
+
+clone:
+  disable: true
+
+steps:
+  - name: harbor-amd64
+    image: registry.cn-qingdao.aliyuncs.com/wod/devops-docker-tag:1.0
+    settings:
+      source: registry.cn-qingdao.aliyuncs.com/wod/awecloud-metrics-scraper:v6.0.6-amd64
+      target: registry.cn-qingdao.aliyuncs.com/wod/awecloud-metrics-scraper:v6.0-amd64
+      registry: registry.cn-qingdao.aliyuncs.com
+      registry_user:
+        from_secret: REGISTRY_USER_ALIYUN
+      registry_password:
+        from_secret: REGISTRY_PASSWORD_ALIYUN
+
+  - name: harbor-arm64
+    image: registry.cn-qingdao.aliyuncs.com/wod/devops-docker-tag:1.0
+    settings:
+      source: registry.cn-qingdao.aliyuncs.com/wod/awecloud-metrics-scraper:v6.0.6-arm64
+      target: registry.cn-qingdao.aliyuncs.com/wod/awecloud-metrics-scraper:v6.0-arm64
+      registry: registry.cn-qingdao.aliyuncs.com
+      registry_user:
+        from_secret: REGISTRY_USER_ALIYUN
+      registry_password:
+        from_secret: REGISTRY_PASSWORD_ALIYUN
+
+  - name: harbor-ppc64le
+    image: registry.cn-qingdao.aliyuncs.com/wod/devops-docker-tag:1.0
+    settings:
+      source: registry.cn-qingdao.aliyuncs.com/wod/awecloud-metrics-scraper:v6.0.6-ppc64le
+      target: registry.cn-qingdao.aliyuncs.com/wod/awecloud-metrics-scraper:v6.0-ppc64le
+      registry: registry.cn-qingdao.aliyuncs.com
+      registry_user:
+        from_secret: REGISTRY_USER_ALIYUN
+      registry_password:
+        from_secret: REGISTRY_PASSWORD_ALIYUN
+
+  - name: harbor-mips64le
+    image: registry.cn-qingdao.aliyuncs.com/wod/devops-docker-tag:1.0
+    settings:
+      source: registry.cn-qingdao.aliyuncs.com/wod/awecloud-metrics-scraper:v6.0.6-mips64le
+      target: registry.cn-qingdao.aliyuncs.com/wod/awecloud-metrics-scraper:v6.0-mips64le
+      registry: registry.cn-qingdao.aliyuncs.com
+      registry_user:
+        from_secret: REGISTRY_USER_ALIYUN
+      registry_password:
+        from_secret: REGISTRY_PASSWORD_ALIYUN
+
+  - name: harbor-arch
+    image: registry.cn-qingdao.aliyuncs.com/wod/devops-docker-manifest:1.0
+    settings:
+      platforms: linux/amd64,linux/arm64,linux/ppc64le,linux/mips64le
+      template: registry.cn-qingdao.aliyuncs.com/wod/awecloud-metrics-scraper:v6.0-ARCH
+      target: registry.cn-qingdao.aliyuncs.com/wod/awecloud-metrics-scraper:v6.0
       username:
         from_secret: REGISTRY_USER_ALIYUN
       password:
